@@ -32,7 +32,8 @@
 
 (define-local-member-name
   do-set-pen!
-  do-set-brush!)
+  do-set-brush!
+  text-path)
 
 (define 2pi (* 2 pi))
 
@@ -1161,8 +1162,15 @@
       (with-cr
        (check-ok 'draw-text)
        cr
-       (do-text cr #t s x y font combine? offset angle)
+       (do-text cr 'draw s x y font combine? offset angle)
        (flush-cr)))
+
+    (define/public (text-path s x y combine?)
+      (with-cr
+       (check-ok 'draw-text)
+       cr
+       (do-text cr 'path s x y font combine? 0 0.0)
+       (cairo_copy_path cr)))
 
     (define size-cache (make-weak-hasheq))
 
@@ -1231,12 +1239,12 @@
 	    (set-font-antialias c (dc-adjust-smoothing (send font get-smoothing)))
 	    c)))
 
-    (define/private (do-text cr draw? s x y font combine? offset angle)
+    (define/private (do-text cr draw-mode s x y font combine? offset angle)
       (let* ([s (if (zero? offset) 
                     s 
                     (substring s offset))]
              [blank? (string=? s "")]
-             [s (if (and (not draw?) blank?) " " s)]
+             [s (if (and (not draw-mode) blank?) " " s)]
              [s (if (for/or ([c (in-string s)])
                       (or (eqv? c #\uFFFE) (eqv? c #\uFFFF)))
                     ;; Since \uFFFE and \uFFFF are not supposed to be in any
@@ -1244,10 +1252,10 @@
                     ;; string to Pango:
                     (regexp-replace* #rx"[\uFFFE\uFFFF]" s "\uFFFD")
                     s)]
-             [rotate? (and draw? (not (zero? angle)))]
+             [rotate? (and draw-mode (not (zero? angle)))]
              [smoothing-index (get-smoothing-index)]
              [context (get-context cr smoothing-index)])
-        (when draw?
+        (when draw-mode
           (when (eq? text-mode 'solid)
             (unless rotate?
               (let-values ([(w h d a) (do-text cr #f s 0 0 font combine? 0 0.0)])
@@ -1276,7 +1284,7 @@
               ;; This is combine mode. It has to be a little complicated, after all,
               ;; because we may need to implement font substitution ourselves, which
               ;; breaks the string into multiple layouts.
-              (let loop ([s s] [draw? draw?] [measured? #f] [w 0.0] [h 0.0] [d 0.0] [a 0.0])
+              (let loop ([s s] [draw-mode draw-mode] [measured? #f] [w 0.0] [h 0.0] [d 0.0] [a 0.0])
                 (cond
                  [(not s)
                   (when rotate? (cairo_restore cr))
@@ -1313,11 +1321,11 @@
                                    (install-alternate-face (string-ref s 0) layout font desc attrs context))
                                  (substring s (max 1 ok-count))))])
                       (cond
-                       [(and draw? next-s (not measured?))
+                       [(and draw-mode next-s (not measured?))
                         ;; It's going to take multiple layouts, so first gather measurements.
                         (let-values ([(w2 h d a) (loop s #f #f w h d a)])
                           ;; draw again, supplying `h', `d', and `a' for the whole line
-                          (loop s #t #t w h d a))]
+                          (loop s draw-mode #t w h d a))]
                        [else
                         (let ([logical (make-PangoRectangle 0 0 0 0)])
                           (pango_layout_get_extents layout #f logical)
@@ -1325,16 +1333,19 @@
                                 [nd (/ (- (PangoRectangle-height logical)
                                           (pango_layout_get_baseline layout))
                                        (exact->inexact PANGO_SCALE))])
-                            (when draw?
+                            (when draw-mode
                               (let ([bl (if measured? (- h d) (- nh nd))])
                                 (pango_layout_get_extents layout #f logical)
                                 (cairo_move_to cr 
                                                (text-align-x/delta (+ x w) 0) 
                                                (text-align-y/delta (+ y bl) 0))
                                 ;; Draw the text:
-                                (pango_cairo_show_layout_line cr (pango_layout_get_line_readonly layout 0))))
+                                (let ([line (pango_layout_get_line_readonly layout 0)])
+                                  (if (eq? draw-mode 'draw)
+                                      (pango_cairo_show_layout_line cr line)
+                                      (pango_cairo_layout_line_path cr line)))))
                             (cond
-                             [(and draw? (not next-s))
+                             [(and draw-mode (not next-s))
                               (g_object_unref layout)
                               (when rotate? (cairo_restore cr))]
                              [else
@@ -1342,7 +1353,7 @@
                                             0.0
                                             (integral (/ (PangoRectangle-width logical) (exact->inexact PANGO_SCALE))))]
                                     [na 0.0])
-                                (loop next-s measured? draw? (+ w nw) (max h nh) (max d nd) (max a na)))])))])))]))
+                                (loop next-s draw-mode measured? (+ w nw) (max h nh) (max d nd) (max a na)))])))])))]))
               ;; This is character-by-character mode. It uses a cached per-character+font layout
               ;;  object.
               (let ([cache (if (or combine?
@@ -1397,7 +1408,7 @@
                 ;; character or if we're just measuring text.
                 (begin0
                  (unless (and
-                          draw?
+                          (eq? draw-mode 'draw)
                           cache
                           (not attrs) ; fast path doesn't handle underline
                           ((string-length s) . > . 1)
@@ -1489,13 +1500,16 @@
                                                                         ;; unrounded height, for slow-path alignment
                                                                         flh)))
                                                    (values lw lh ld la flh)))))))])
-                         (when draw?
+                         (when draw-mode
                            (cairo_move_to cr 
                                           (text-align-x/delta (+ x w) 0) 
                                           (let ([bl (- flh ld)])
                                             (text-align-y/delta (+ y bl) 0)))
                            ;; Here's the draw command, which uses most of the time in this mode:
-                           (pango_cairo_show_layout_line cr (pango_layout_get_line_readonly layout 0)))
+                           (let ([line (pango_layout_get_line_readonly layout 0)])
+                             (if (eq? draw-mode 'draw)
+                                 (pango_cairo_show_layout_line cr line)
+                                 (pango_cairo_layout_line_path cr line))))
                          (values (if blank? 0.0 (+ w lw)) (max h lh) (max d ld) (max a la))))))
                  (when rotate? (cairo_restore cr))))))))
 
@@ -1518,7 +1532,7 @@
               (vector-set! vec 2 #f)
               (vector-set! vec 3 #f)
               (vector-set! vec 4 #f)))))
-    
+
     (def/public (start-doc [string? desc])
       (check-ok 'start-doc))
     (def/public (end-doc)
@@ -1819,3 +1833,14 @@
     (void))
 
   dc%)
+
+(set-text-to-path!
+ (lambda (font str x y combine?)
+   (define tmp-bm (make-object bitmap% 10 10))
+   (define tmp-dc (make-object -bitmap-dc% tmp-bm))
+   (send tmp-dc set-font font)
+   (define path (send tmp-dc text-path str x y combine?))
+   (begin0
+    (cairo-path->list path)
+    (cairo_path_destroy path))))
+
